# django-db-views

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  example_env_file  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml  tests.yml
django_db_views/: __init__.py  autodetector.py  context_manager.py  db_view.py  fixtures.py  migration_functions.py  operations.py
django_db_views/management/: viewmakemigrations.py
django_db_views/management/commands/: makeviewmigrations.py
django_db_views/tests/: models.py  test_settings.py  tests.py
django_db_views/tests/migrations/test_basic_view_creation/: 0001_initial.py
tests/: asserts_utils.py  conftest.py  decorators.py  dynamic_models_fixtures.py  dynamic_models_fixturies.py  fixturies.py  test_autodetector.py  test_backward_compatibility.py  test_db_views.py  test_materialized_views.py  utils.py
tests/backward_compatibility_test_app/: models.py
tests/backward_compatibility_test_app/migrations/: 0-0-9_to_0-0-10_added_engine_support.py
tests/migrations_samples/: separate_database_and_state_migration.py
tests/test_app/: models.py
