[project]
name = "django-db-views"
version = "0.1.7"
description = """
    Handle database views.
    Allow to create migrations for database views.
    View migrations using django code.
    They can be reversed.
    Changes in model view definition are detected automatically.
    Support almost all options as regular makemigrations command
"""
keywords = [
    "views",
    "database views",
    "django",
    "database perspective",
    "view migrations",
    "database table function",
    "django materialized views",
]
authors = [
  {name = "Bartłomiej Nowak", email = "n.bartek3762@gmail.com"},
  {name = "Mariusz Okulanis"},
]
maintainers = [
  {name = "Bartłomiej Nowak", email = "n.bartek3762@gmail.com"}
]
license = {text = "MIT License"}
readme = {file = "README.md", content-type = "text/markdown"}
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
py_modules = ["six"]
dependencies = [
  "django"
]

[project.urls]
Homepage = "https://github.com/BezBartek/django-db-views"
Documentation = "https://github.com/BezBartek/django-db-views/blob/master/README.md"
Repository = "https://github.com/BezBartek/django-db-views"
Issues = "https://github.com/BezBartek/django-db-views/issues"
Changelog = "https://github.com/BezBartek/django-db-views/blob/master/CHANGELOG.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    '/README.md',
    '/CHANGELOG.md',
    '/LICENSE',
    '/django_db_views'
]

[tool.pytest.ini_options]
addopts = "--migrations --create-db"
